--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
 name: RoadRunner Action
-on: [push]:
-      branches:
-        - main
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   First-Test-Job:
     runs-on: ubuntu-latest
