--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@nuxt/ui": "^3.0.2",
     "axios": "^1.8.4",
     "nuxt": "^3.16.1",
+    "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
