--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,22 @@
 name: RoadRunner Action
-
 on:
   push:
     branches:
       - main
 
 jobs:
-  test:
-    name: Run backend tests
+  First-Test-Job:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v5
         with:
-          python-version: 3.10
-
+          python-version: '3.10'  
       - name: Install dependencies
         run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install --upgrade pip
+          cd backend
           pip install -r requirements.txt
-
-      - name: Run unittests
+      - name: Run tests
         run: |
-          source venv/bin/activate
-          python -m unittest discover -s tests -p "test_*.py"
+          cd backend
+          pytest
