--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,3 +53,34 @@ jobs:
       - name: Run tests with pytest
         working-directory: backend
         run: pytest
+
+  run-pylint:
+    needs: install-dependencies
+    runs-on: ubuntu-latest
+    steps:
+
+    - name: Checkout repo
+      uses: actions/checkout@v2
+
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
+
+
+    - name: Install dependencies
+      working-directory: backend
+      run: pip install -r requirements.txt
+
+
+    - name: Run Pylint
+      run: |
+        pylint backend/**/*.py --output-format=text --disable=R0801 --max-line-length=120 > pylint-report.txt# Extract the score from the output
+        score=$(tail -n 1 pylint-report.txt | awk '{print $1}')
+        echo "Pylint score: $score"# Set a condition to fail the job if the score is below 5
+        if [ $(echo "$score < 5" | bc) -eq 1 ]; then
+          echo "Pylint score is below 5. Failing the pipeline."
+          exit 1
+        fi
+      working-directory: backend
