--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,13 @@
 annotated-types==0.7.0
 anyio==4.9.0
+astroid==3.3.9
+bcrypt==4.3.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+dill==0.3.9
 dnspython==2.7.0
 email_validator==2.2.0
-exceptiongroup==1.2.2
 fastapi==0.115.12
 fastapi-cli==0.0.7
 googlemaps==4.10.0
@@ -16,17 +18,21 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
+isort==6.0.1
 Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mccabe==0.7.0
 mdurl==0.1.2
 mysql-connector-python==9.2.0
 packaging==24.2
 passlib==1.7.4
+platformdirs==4.3.7
 pluggy==1.5.0
 pydantic==2.11.1
 pydantic_core==2.33.0
 Pygments==2.19.1
+pylint==3.3.6
 PyMySQL==1.1.1
 pytest==8.3.5
 python-dotenv==1.1.0
@@ -39,7 +45,7 @@ shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.40
 starlette==0.46.1
-tomli==2.2.1
+tomlkit==0.13.2
 typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.0
