--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.9.0
 astroid==3.3.9
+autopep8==2.3.2
 bcrypt==4.3.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -29,6 +30,7 @@ packaging==24.2
 passlib==1.7.4
 platformdirs==4.3.7
 pluggy==1.5.0
+pycodestyle==2.13.0
 pydantic==2.11.1
 pydantic_core==2.33.0
 Pygments==2.19.1
