--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,8 +72,8 @@ jobs:
 
 
     - name: Run Pylint
+      working-directory: backend
       run: |
-        cd backend
         pylint_output=$(pylint --max-line-length=100 --output-format=text $(git ls-files '*.py'))
         echo "$pylint_output"
         exit 0
