--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,4 @@ jobs:
 
     - name: Run Pylint
       working-directory: backend
-      run: |
-        pylint_output=$(pylint --max-line-length=100 --output-format=text $(git ls-files '*.py'))
-        echo "$pylint_output"
-        exit 0
+      run: pylint --max-line-length=100 --output-format=text $(git ls-files '*.py')
