--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,4 +73,14 @@ jobs:
 
     - name: Run Pylint
       working-directory: backend
-      run: pylint --max-line-length=100 --output-format=text $(git ls-files '*.py')
+      run: |
+        score=$(pylint --max-line-length=100 --output-format=text $(git ls-files '*.py') | grep -oP '\d+\.\d+(?=/10)' | tail -n 1)
+        echo "Pylint score: $score"
+
+        if (( $(echo "$score >= 5" | bc -l) )); then
+          echo "Pylint score is acceptable."
+          exit 0
+        else
+          echo "Pylint score is too low."
+          exit 1
+        fi
